--- a/index.css
+++ b/index.css
@@ -1,22 +1,75 @@
 body{
-    position: relative; 
-}
-.navbar{
-    padding: 0px; 
-    margin: 0px; 
-}
-.jumbotron{
-    background: url(./images/palms.jpeg) no-repeat center center; 
-    background-size: 100%; 
-    color: white; 
+  background-image: url("./images/bg_gogurt1@4x.png");
+  color: white;
+  background-size: cover;
 }
 
-.fa{
-    padding: 20px;
-    font-size: 30px;
-    width: 50px;
+#nav-bar{
+  list-style-type: none;
+  overflow: hidden;
+}
+
+.nav-bar-links a:link {
+    display: block;
+    color: white;
     text-align: center;
+    padding: 10px 10px;
     text-decoration: none;
-    margin: 5px 2px;
 }
 
+.nav-bar-links a:visited{
+  color: white;
+}
+
+#right-list{
+  float: right;
+}
+
+#right-header{
+  position: sticky;
+  width: 100%;
+  height: 4em;
+}
+
+#header{
+  list-style-type: none;
+  overflow: hidden;
+  position: sticky;
+  width: 100%;
+  height: 4em;
+  background-color: #1e1d1c;
+}
+
+#jumbo-div{
+  position: fixed;
+  width: 80%;
+  left: 10%;
+  top: 13%;
+  background-color: #1e1d1c;
+}
+
+#jumbo-div-transparent {
+  position: fixed;
+  width: 80%;
+  left: 5%;
+  top: 15%;
+}
+
+#landing{
+  background-image: url("./images/landing.jpg");
+  background-size: cover;
+}
+
+#middle{
+  position: fixed;
+  top: 60%;
+  left: 10%;
+}
+
+#profilepic{
+  border-radius: 160px;
+  height: 30%;
+  width: 20%;
+  position: relative;
+  float: right;
+}
